force-app/main/default/objects/Integration_API_Configuration__c/fields/Adapter_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Adapter_Class_Name__c</fullName>
    <description>Name of the Class which handles this integration processing.</description>
    <inlineHelpText>Name of the Class which handles this integration processing.</inlineHelpText>
    <label>Adapter Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>