force-app/main/default/objects/Integration_API_Configuration__c/fields/Additional_Header_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Additional_Header_Parameters__c</fullName>
    <description>The key value pairs to be passed in the HTTP Request Header. Content type is passed in by default, based on the HTTP_Content_Type field. If there are other parameters, then they need to go here, as JSON key/value pairs.</description>
    <inlineHelpText>Key value pairs to be passed in the HTTP Request Header</inlineHelpText>
    <label>Additional Header Parameters</label>
    <type>TextArea</type>
</CustomField>