force-app/main/default/objects/Integration_API_Configuration__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>The endpoint for the API for the third party system. For example in the D &amp; B system, the REST API endpoint for the &apos;Cleanse &amp; Match&apos; API is &apos;/V6.0/organizations&apos;.</description>
    <inlineHelpText>The endpoint for the API for the third party system</inlineHelpText>
    <label>API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>