force-app/main/default/objects/Integration_API_Configuration__c/fields/Asynchronous_Operation__c.field-meta.xml
<CustomField>
    <fullName>Asynchronous_Operation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this API call is a long running operation. If set to true, the integration platform will execute the API call asynchronously.</description>
    <inlineHelpText>Indicates if this API call is a long running operation. If set to true, the integration platform will execute the API call asynchronously.</inlineHelpText>
    <label>Asynchronous Operation</label>
    <type>Checkbox</type>
</CustomField>