force-app/main/default/objects/Integration_API_Configuration__c/fields/Concurrent_Process__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concurrent Process</label>
    <type>Checkbox</type>
</CustomField>