force-app/main/default/objects/Integration_API_Configuration__c/fields/Disable_Logging__c.field-meta.xml
<CustomField>
    <fullName>Disable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, integration logging feature will be disabled.</inlineHelpText>
    <label>Disable Logging</label>
    <type>Checkbox</type>
</CustomField>