force-app/main/default/objects/Integration_API_Configuration__c/fields/HTTP_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Content_Type__c</fullName>
    <defaultValue>&quot;application/json&quot;</defaultValue>
    <description>The HTTP content type for this API, for example application/xml or application/json.</description>
    <inlineHelpText>HTTP content type for this API</inlineHelpText>
    <label>HTTP Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>