force-app/main/default/objects/Integration_API_Configuration__c/fields/HTTP_Method__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Method__c</fullName>
    <description>The HTTP method to be invoked for this API. Typically GET or POST.</description>
    <inlineHelpText>The HTTP method to be invoked for this API</inlineHelpText>
    <label>HTTP Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>