force-app/main/default/objects/Integration_API_Configuration__c/fields/Log_Request_and_Response_body__c.field-meta.xml
<CustomField>
    <fullName>Log_Request_and_Response_body__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the request and response body would be logged.</description>
    <inlineHelpText>If true, the request and response body would be logged.</inlineHelpText>
    <label>Log Request and Response</label>
    <type>Checkbox</type>
</CustomField>