force-app/main/default/objects/Integration_API_Configuration__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>The name of the Named Credential record that stores the authentication information needed to invoke this API, if any. The Integration_Configuration__c object stores the Named Credential information for the third party system, if the third party service provides separate authentication that&apos;s not API specific. Over and above that, the API_Named_Credential field stores API specific authentication information, if any.</description>
    <inlineHelpText>Name of the Named Credential record that stores the login credentials needed to invoke this API, if any</inlineHelpText>
    <label>API Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>