force-app/main/default/objects/Integration_API_Configuration__c/fields/Number_Of_Retries__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If the response indicates that the request needs to be retied, or there is an http timeout, then the framework will retry the number of times specified in this field.</description>
    <inlineHelpText>Number of retries allowed for the integration request</inlineHelpText>
    <label>Number Of Retries</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>