force-app/main/default/objects/Integration_API_Configuration__c/fields/Request_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeout__c</fullName>
    <defaultValue>120000</defaultValue>
    <description>HTTP timeout for the integration request, default value is 120 seconds.</description>
    <inlineHelpText>HTTP timeout for the integration request</inlineHelpText>
    <label>Request Timeout</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>