force-app/main/default/objects/Integration_API_Configuration__c/fields/Response_Mock__c.field-meta.xml
<CustomField>
    <fullName>Response_Mock__c</fullName>
    <label>Response Mock</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>