force-app/main/default/objects/Integration_API_Configuration__c/fields/SObject_query_configuration__c.field-meta.xml
<CustomField>
    <fullName>SObject_query_configuration__c</fullName>
    <inlineHelpText>JSON configuration which would be queried and passed to Adapter</inlineHelpText>
    <label>SObject query configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>