force-app/main/default/objects/Integration_API_Configuration__c/fields/Static_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Static_Parameters__c</fullName>
    <inlineHelpText>JSON key-value pair, the same would be passed down to the Adapter.</inlineHelpText>
    <label>Static Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>