force-app/main/default/objects/Integration_API_Configuration__c/fields/Use_Response_Mocker__c.field-meta.xml
<CustomField>
    <fullName>Use_Response_Mocker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the response to this request needs to be mocked. Mock responses mimic the third party response.</description>
    <inlineHelpText>Indicates if the response to this request needs to be mocked</inlineHelpText>
    <label>Use Response Mocker</label>
    <type>Checkbox</type>
</CustomField>