force-app/main/default/objects/Integration_API_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>HTTP_Method__c</columns>
    <columns>Adapter_Class_Name__c</columns>
    <columns>API_Endpoint__c</columns>
    <columns>Named_Credential__c</columns>
    <columns>Asynchronous_Operation__c</columns>
    <columns>Disable_Logging__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>